fix and scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,23 @@
     font-family: "Poppins";
 }
 
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgb(9, 75, 114);
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(9, 75, 114, 0.8);
+}
+
 .container {
     margin: 0 auto;
     width: 1110px;
@@ -125,7 +142,7 @@ nav {
     transition: all 0.3s;
 }
 
-.search:hover{
+.search:hover {
     transform: scale(1.2);
 }
 
@@ -674,6 +691,9 @@ footer {
     .help_right {
         gap: 20px;
     }
+    .block {
+        margin: -89px 0px 0;
+    }
 }
 
 @media (max-width: 992px) {
@@ -687,7 +707,8 @@ footer {
         margin-right: 0;
     }
     .right ul {
-        margin-right: 50px;
+        margin-right: 32px;
+        gap: 42px;
     }
     .title {
         max-width: 586px;
